--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,34 +1,35 @@
-name: Build APK
+name: Build LabPixel
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
-    name: Build Debug APK
+    name: Build APK
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Make Gradle executable
+      - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Build APK
+      - name: Build Debug APK
         run: ./gradlew assembleDebug
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
+      - name: Upload Debug APK
+        uses: actions/upload-artifact@v4
         with:
-          name: LabPixel-debug-apk
+          name: LabPixel-APK
           path: app/build/outputs/apk/debug/app-debug.apk
 
