--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,5 +31,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: LabPixel-APK
-          path: app/build/outputs/apk/debug/app-debug.apk
+          chemin : application/build/outputs/apk/debug/application-debug.apk
+
 
