--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,7 +3,7 @@ name: Build LabPixel
 on:
   push:
     branches:
-      - main
+      - principal
   workflow_dispatch:
 
 jobs:
@@ -31,6 +31,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: LabPixel-APK
-          chemin : application/build/outputs/apk/debug/application-debug.apk
-
-
+          path: application/build/outputs/apk/debug/application-debug.apk
